# recipes

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.deps  README.md  bash_runner.py  docker-compose.yml  flake.nix  fly.toml  pyproject.toml
app/: api.py  config.py  scripts.py
app/recipes/: handlers.py  models.py
app/recipes/api/: errors.py  models.py  specs.py  views.py
app/recipes/repository/: orm.py  repository.py
fly_mysql/: fly.toml
migration/: env.py
migration/versions/: dd58db09bce7_initial_migration.py
scripts/: bootstrap  build  build-deps  format  ipython  lint  reset-db  setup  start  start-prod  test  update
src/app/: api.py
src/app/recipes/: handlers.py  models.py
src/app/recipes/api/: models.py  specs.py  views.py
src/app/recipes/repository/: repository.py
